--- a/assignment.html
+++ b/assignment.html
@@ -66,6 +66,6 @@
 
     <footer></footer>
 
-    <script src="./js/assignment.js"></script>
+    <script src="js/testingassignment.js"></script>
 </body>
 </html>
